--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="widistillh=device-widistillh, initial-scale=1">
     <title>计算音乐</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <script src="template.v2.js"></script>
 </head>
 
 <body>
       <distill-header></distill-header>
           <d-title>
-              <p>这是一个关于计算音乐，合成器技术，数字乐器，音乐AI的网站。</p>
+              <p>这是一个关于音乐合成器技术，数字乐器，音乐AI的网站。</p>
           </d-title>
       <d-article>
-        <!--
         <h3>目录</h3>
+        <!--
         <ul>
             <li><a href="ch_00.html"> 0. 前言 </a>
                   <figcaption> 本书的一些事项 </figcaption>
