--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="widistillh=device-widistillh, initial-scale=1">
     <title>计算音乐</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
     <script src="template.v2.js"></script>
 </head>
 
 <body>
       <distill-header></distill-header>
+          <!--
           <d-title>
-              <p>这是一个关于音乐合成器技术，数字乐器，音乐AI的网站。</p>
+              <p>标题</p>
           </d-title>
+          -->
       <d-article>
         <h3>目录</h3>
         <!--
@@ -22,16 +23,8 @@
         </ul>
         -->
       </d-article>
-      <d-appendix>
-      <h3>网站技术</h3>
-      <p>
-        本网站基于distill.pub相关技术开发
-      </p>
-      <h3>中文排版</h3>
-      <p>
-        中文或者中英文混合排版, <a href="https://github.com/sparanoid/chinese-copywriting-guidelines">参考网站</a> .
-      </p>
-      </d-appendix>
-  
+ 
+      <d-appendix></d-appendix>
+
       <distill-footer></distill-footer>
   </body>
