clean code added blog

--- a/book.html
+++ b/book.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="widistillh=device-widistillh, initial-scale=1">
     <title>计算音乐</title>
-    <script src="template.v2.js"></script>
+    <script src="/template.v2.js"></script>
 </head>
 
 <body>
