--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="widistillh=device-widistillh, initial-scale=1">
     <title>计算音乐</title>
-    <script src="template.v2.js"></script>
+    <script src="/template.v2.js"></script>
 </head>
 
 <body>
   <distill-header></distill-header>
-  
+  <d-title>
+    <p>计算音乐，是一个关于合成器技术、数字乐器和音乐AI的网站。</p>
+  </d-title>
+  <d-article>
+    <p>文章和资料</p>
+    <ul>
+      <li>
+        <a href="blog/open_synth_hw.html"> 开源数字乐器、合成器硬件项目集合 </a>
+        <figcaption>2022-11-26, 各种有关合成器、MIDI控制器的开源硬件项目</a></figcaption>
+      </li>
+
+      <!--
+      <li>
+        <a href="https://news.ycombinator.com/item?id=33682813"> 用机械键盘来制作一个数字萨克斯（电吹管）</a>
+        <figcaption>2022-11-26, HackNews，<a href="https://github.com/jcard0na/haxo-hw"> 一个非常优秀的开源硬件项目</a></figcaption>
+      </li>
+      <li>
+        <a href="https://www.osar.fr/notes/waveguides/"> Waveguide &nbsp;合成技术笔记 </a>
+        <figcaption>2022-11-26, 用<a href="https://audiomasher.org/">AudioMasher技术</a>展示的物理模型实现</a></figcaption>
+      </li>
+      -->
+
+    </ul>
+  </d-article>
 
   <distill-footer></distill-footer>
 </body>
