--- a/index.html
+++ b/index.html
@@ -9,27 +9,25 @@
 <body>
   <distill-header></distill-header>
   <d-title>
-    <p>计算音乐，是一个关于合成器技术、数字乐器和音乐AI的网站。</p>
+    <p>计算音乐，是一个关于合成器技术、数字乐器和音乐AI的网站，下面是一些原创文章和有趣的外部链接。</p>
   </d-title>
   <d-article>
     <p>文章和资料</p>
     <ul>
       <li>
-        <a href="blog/open_synth_hw.html"> 开源数字乐器、合成器硬件项目集合 </a>
-        <figcaption>2022-11-26, 各种有关合成器、MIDI控制器的开源硬件项目</a></figcaption>
+        <a href="https://www.patchmanmusic.com/NyleSteinerHomepage.html"> 电吹管控制器的发明历史(zz)</a>
+        <figcaption>2022-11-26, 电吹管的发明人 Nyle Steiner 的故事 </a></figcaption>
       </li>
 
-      <!--
       <li>
-        <a href="https://news.ycombinator.com/item?id=33682813"> 用机械键盘来制作一个数字萨克斯（电吹管）</a>
-        <figcaption>2022-11-26, HackNews，<a href="https://github.com/jcard0na/haxo-hw"> 一个非常优秀的开源硬件项目</a></figcaption>
-      </li>
-      <li>
-        <a href="https://www.osar.fr/notes/waveguides/"> Waveguide &nbsp;合成技术笔记 </a>
+        <a href="https://www.osar.fr/notes/waveguides/"> Waveguide &nbsp;合成技术笔记(zz) </a>
         <figcaption>2022-11-26, 用<a href="https://audiomasher.org/">AudioMasher技术</a>展示的物理模型实现</a></figcaption>
       </li>
-      -->
 
+      <li>
+        <a href="blog/open_synth_hw.html"> 开源数字乐器、合成器硬件项目集合 (原创) </a>
+        <figcaption>2022-11-26, 各种有关合成器、MIDI控制器的开源硬件项目</a></figcaption>
+      </li>
     </ul>
   </d-article>
 
