--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <distill-header></distill-header>
   <d-title>
-    <p>计算音乐，是一个关于合成器技术、数字乐器和音乐AI的网站，下面是一些原创文章和有趣的外部链接。</p>
+    <p>计算音乐，是一个关于合成器技术、数字乐器和音乐AI的网站，下面是一些原创文章和有趣的资料。</p>
   </d-title>
   <d-article>
     <p>文章和资料</p>
@@ -28,6 +28,7 @@
         <a href="blog/open_synth_hw.html"> 开源数字乐器、合成器硬件项目集合 (原创) </a>
         <figcaption>2022-11-26, 各种有关合成器、MIDI控制器的开源硬件项目</a></figcaption>
       </li>
+      
     </ul>
   </d-article>
 
