clean code add blog

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta name="viewport" content="widistillh=device-widistillh, initial-scale=1">
     <title>计算音乐</title>
     <script src="/template.v2.js"></script>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?9fa168de1e1fa7f185af1025a30fc6a6";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
 </head>
 
 <body>
@@ -14,6 +23,11 @@
   <d-article>
     <p>文章和资料</p>
     <ul>
+      <li>
+        <a href="blog/recipe.html"> 音频（音乐）编程入门指南（翻译）</a>
+        <figcaption>2022-11-26, 一名音乐编程达人的<a href="https://pbat.ch/wiki/audio_programming_recipe/">文章</a>的翻译 </a></figcaption>
+      </li>
+
       <li>
         <a href="https://www.patchmanmusic.com/NyleSteinerHomepage.html"> 电吹管控制器的发明历史(zz)</a>
         <figcaption>2022-11-26, 电吹管的发明人 Nyle Steiner 的故事 </a></figcaption>
