clean code for new blog

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <p>文章和资料</p>
     <ul>
       <li>
+        <a href="blog/cool_instrument1.html"> 那些初创企业酷炫的数字乐器 (原创) </a>
+        <figcaption>2022-11-30, 世界各地初创企业研发的数字乐器</a></figcaption>
+      </li>
+
+      <li>
         <a href="blog/recipe.html"> 音频（音乐）编程入门指南（翻译）</a>
         <figcaption>2022-11-26, 一名音乐编程达人的<a href="https://pbat.ch/wiki/audio_programming_recipe/">文章</a>的翻译 </a></figcaption>
       </li>
